Criado o componente PhotoComponent e vinculado com o AppModule para que o mesmo possa ser acessado pelo app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<h1>{{title}}</h1>
-
-Um data biding em um atributo ele é envolvido entre colchetes
-<img class="img-thumbnail" [src]=url [alt]=description>
+<ap-photo></ap-photo>
+<ap-photo></ap-photo>
