Modificadas as variáveis pra receber as propriedades via html (Inboud Proprerties) e adicionado uma imagem e propriedade diferente pra cada chamada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<ap-photo></ap-photo>
-<ap-photo></ap-photo>
+<ap-photo url="https://sm.ign.com/ign_br/gallery/e/every-char/every-character-in-god-of-war-ragnarok_pcms.jpg" description="Kratos"></ap-photo>
+<ap-photo url="https://sm.ign.com/ign_br/photo/default/atreus-1631227905045_n384.jpg" description="Atreus"></ap-photo>
