Ciado o Modulo photos e adicionado o photo a ele.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<ap-photo url="https://sm.ign.com/ign_br/gallery/e/every-char/every-character-in-god-of-war-ragnarok_pcms.jpg" description="Kratos"></ap-photo>
-<ap-photo url="https://sm.ign.com/ign_br/photo/default/atreus-1631227905045_n384.jpg" description="Atreus"></ap-photo>
+<ap-photo url="../assets/images/kratos.jpg" description="Kratos"></ap-photo>
+
+<ap-photo url="../assets/images/atreus.jpg" description="Atreus"></ap-photo>
+
+
+
