--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ap-photo 
-    *ngFor="let photo of photos" 
+    *ngFor="photo of photos" 
     [url]="photo.url" 
     [description]="photo.description">
-</ap-photo>
+</ap-photo> 
