resolvido o problema que as imagens não eram renderizadas e criado um photoService

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<ap-photo 
+<!-- <ap-photo 
     *ngFor="photo of photos" 
     [url]="photo.url" 
     [description]="photo.description">
-</ap-photo> 
+</ap-photo>  -->
+
+<div *ngFor="let i of photos">
+    <img [attr.src]="i.url" class="img-thumbnail"> 
+ </div>
